[project]
name = "excel-template-merger"
version = "0.1.0"
description = ""
authors = [
    {name = "xueyu",email = "xueuy@qq.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "xlrd (>=2.0.2,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.14.2"

